<resources>
    <string name="app_name">Technopolis Shuttle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reload_shedule">Обновить расписание</string>
    <string name="settings">Настройки</string>
    <string name="open_resource">Открыть сайт</string>
    <string name="change_shedule">Изменить расписание</string>
    <string name="help">Помощь</string>
    <string name="about_us">О нас</string>
    <string name="short_shedule">Краткий</string>
    <string name="full_shedule">Полный</string>
    <string name="map">Место</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="to_technopolis">В Технополис</string>
    <string name="to_underground">К метро</string>
    <string name="show_past">Отображать прошедшие</string>
    <string name="address_of_bus_station">Автобусная ост., м.Московская  Московский проспект, 189</string>
    <string name="address_of_technopolis">Б.Ц. TECHNOPOLIS Пулковское шоссе, 40к4</string>
    <string name="address_of_server">Адрес сервера включая протокол</string>
    <string name="sync_timeout">Таймаут синхронизации в миллисекундах</string>
    <string name="num_of_elements_in_short">Количество элементов на кратком отображении</string>
    <string name="eps_radius_technopolis">Радиус окрестностей бизнес-центра в километрах</string>
    <string name="show_toast_snackbar">Показывать Toast вместо Snackbar</string>
    <string name="not_show_toast_snackbar">Не показывать Snackbar и Toast</string>
    <string name="reset_settings_and_cash">Сбросить настройки и кэш</string>
    <string name="save">Сохранить</string>
    <string name="close">Закрыть</string>
    <string name="departure">Отбытие</string>
    <string name="time_left">Осталось времени</string>
    <string name="daily">ежедневно</string>
    <string name="except">кроме</string>
    <string name="only">только</string>
    <string name="right_now">прямо сейчас</string>
    <string name="showed">Показаны</string>
    <string name="no_more_buses">Cегодня автобусов в этом направлении больше нет.</string>
    <string name="no_more_buses_today">Больше нет рейсов на сегодня.</string>
    <string name="nearests_buses">ближайших рейсов.</string>
    <string name="hour">час</string>
    <string name="min">мин</string>
    <string name="empty">пусто</string>
    <string name="settings_reset">Настройки сброшены!</string>
    <string name="incorrect_values">Введены некорректные значения</string>
    <string name="saved">Сохранено!</string>
    <string name="reset_settings_and_cache">Сбросить настройки и кэш</string>
    <string name="metro">м. Московская</string>
    <string name="address_metro">Московский проспект, 189</string>
    <string name="address_technopolis">Пулковское шоссе, 40к4</string>
    <string name="loading">Загрузка...</string>
    <string name="click_again">Нажмите повторно для выхода</string>
    <string-array name="weekdays">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string-array name="weekdays_short">
        <item>пн</item>
        <item>вт</item>
        <item>ср</item>
        <item>чт</item>
        <item>пт</item>
        <item>сб</item>
        <item>вс</item>
    </string-array>
</resources>
