<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/reload_shedule"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_web"
        android:orderInCategory="100"
        android:title="@string/open_resource"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_change"
        android:orderInCategory="100"
        android:title="@string/change_shedule"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about_us"
        app:showAsAction="never"/>
</menu>